--- a/gestion-domo/hass-compose.yaml
+++ b/gestion-domo/hass-compose.yaml
@@ -112,7 +112,7 @@ services:
     restart: unless-stopped
     ports:
       - 833:8080
-    network_mode: host
+#    network_mode: host
     volumes:
       - /docker/zigbee2mqtt/data:/app/data
       - /run/udev:/run/udev:ro
