--- a/gestion-red/pihole-compose.yaml
+++ b/gestion-red/pihole-compose.yaml
@@ -17,8 +17,8 @@ services:
     image: pihole/pihole:latest
     container_name: "pihole"
     restart: unless-stopped
-    security_opt:
-      - no-new-privileges:true
+#    security_opt:
+#      - no-new-privileges:true
     # For DHCP it is recommended to remove these ports and instead add: network_mode: "host"
     #ports:
     #  - 53:53/tcp
