--- a/gestion-domo/hass-compose.yaml
+++ b/gestion-domo/hass-compose.yaml
@@ -1,136 +1,5 @@
 # https://github.com/EnriqueBesuman/Docker_Config
 #
-version: "3.8"
-
-services:
-
-############
-# NUT-UPSD #
-############
-#
-#  Instalación: https://blog.crstian.me/post/2022-08-05-integrar-sai-salicru-sps-500-one-en-home-assistant-con-docker/
-#  Documentación: https://networkupstools.org/docs/man/genericups.html
-#
-  nut-upsd:
-    image: upshift/nut-upsd
-    container_name: nut-upsd
-    restart: unless-stopped
-    security_opt:
-    - no-new-privileges:true
-    ports:
-      - 3493:3493
-    environment:
-      - TZ=${TZ}
-      - PUID=${PUID}
-      - PGID=${PGID}
-      - UPS_DRIVER=blazer_usb
-      - API_USER=upsmon # Opcional, este es el user por defecto
-      - API_PASSWORD=secret # Opcional, esta es la password por defecto
-    devices:
-      - /dev/bus/usb/001/007 # Para obtner el ubs: lsusb
-    labels: # Labels para What's up Docker
-      - wud.display.name=Network UPS Tools
-      - wud.display.icon=mdi:car-battery
-
-###########
-# FRIGATE #
-###########
-#
-# http://192.168.1.254:5000
-#
-# Solución para el sonido cámaras Imou: https://github.com/blakeblackshear/frigate/issues/2506
-# ConfigTool para configurar H.264: https://dahuawiki.com/ConfigTool
-#
-  frigate:
-    image: ghcr.io/blakeblackshear/frigate:stable
-    container_name: frigate
-    restart: unless-stopped
-    security_opt:
-    - no-new-privileges:true
-    ports:
-      - 5000:5000
-      - 1935:1935 # RTMP feeds
-    volumes:
-      - /etc/localtime:/etc/localtime:ro
-      - /docker/frigate/config/config.yml:/config/config.yml:ro
-      - /docker/frigate/media:/media/frigate
-      - type: tmpfs # Optional: 1GB of memory, reduces SSD/SD Card wear
-        target: /tmp/cache
-        tmpfs:
-          size: 1000000000
-    environment: # No cambiar los nombres de las variables, Frigate espera estas y no otras...
-      - TZ=${TZ}
-      - PUID=${PUID}
-      - PGID=${PGID}
-      - FRIGATE_MQTT_USER=${MQTT_USR}
-      - FRIGATE_MQTT_PASSWORD=${MQTT_PWD}
-      - FRIGATE_RTSP_USER=${RTSP_USR}
-      - FRIGATE_RTSP_PASSWORD=${RTSP_PWD}
-    labels: # Labels para What's up Docker
-      - wud.display.name=Frigate
-      - wud.display.icon=mdi:cctv
-
-########
-# MQTT #
-########
-#
-# Documentación: https://www.youtube.com/watch?v=on9JfmpaUJ0&list=PLIr0LNE5Lat2RifKJbH2xaqIHPuFEpYnf&index=7
-# https://www.homeautomationguy.io/docker-tips/configuring-the-mosquitto-mqtt-docker-container-for-use-with-home-assistant/
-#
-  mqtt:
-    image: eclipse-mosquitto
-    container_name: mqtt
-    restart: unless-stopped
-    security_opt:
-    - no-new-privileges:true
-    ports:
-      - 1883:1883
-      - 9001:9001
-    volumes:
-      - /docker/mqtt/config:/mosquitto/config
-      - /docker/mqtt/data:/mosquitto/data
-      - /docker/mqtt/log:/mosquitto/log
-    environment:
-      - TZ=${TZ}
-      - PUID=${PUID}
-      - PGID=${PGID}
-    labels: # Labels para What's up Docker
-      - wud.display.name=MQTT
-      - wud.display.icon=si:mqtt
-
-###############
-# ZIGBEE2MQTT #
-###############
-#
-# http://192.168.1.254:833
-#
-  zigbee2mqtt:
-    depends_on: [mqtt]
-    image: koenkk/zigbee2mqtt
-    container_name: zigbee2mqtt
-    restart: unless-stopped
-    security_opt:
-    - no-new-privileges:true
-    ports:
-      - 833:8080
-#    network_mode: host
-    volumes:
-      - /docker/zigbee2mqtt/data:/app/data
-      - /run/udev:/run/udev:ro
-    environment:
-      - TZ=${TZ}
-      - PUID=${PUID}
-      - PGID=${PGID}
-    devices:
-      - /dev/ttyACM0:/dev/ttyACM0
-    labels: # Labels para What's up Docker
-      - wud.display.name=ZigBee2Mqtt
-      - wud.display.icon=si:zigbee
-      
-#################
-# HOMEASSISTANT #
-#################
-#
 # https://https://192.168.1.254:8123/
 # https://ha.mykasa.mooo.com
 #
@@ -148,6 +17,10 @@ services:
 # - Iconos Material Design: https://materialdesignicons.com/
 # - Iconos Simple Icons: https://simpleicons.org/
 #
+version: "3.8"
+
+services:
+
   hass:
     depends_on: 
       - nut-upsd
@@ -174,5 +47,5 @@ services:
       
 networks:
   default:
-    name: gestion-red_customnetwork
+    name: nginx_proxy
     external: true
