--- a/utilidades/duplicati-compose.yaml
+++ b/utilidades/duplicati-compose.yaml
@@ -10,6 +10,8 @@ services:
     image: lscr.io/linuxserver/duplicati:latest
     container_name: "duplicati"
     restart: unless-stopped
+    security_opt:
+      - no-new-privileges:true
     ports:
       - "8200:8200"
     volumes:
@@ -24,3 +26,10 @@ services:
     labels: # Labels para What's up Docker
       - wud.display.name=Duplicati
       - wud.display.icon=mdi:cloud-upload-outline
+
+networks:
+  default:
+    ipam:
+      driver: default
+      config:
+        - subnet: 192.168.176.0/20
