--- a/utilidades/vscode-compose.yaml
+++ b/utilidades/vscode-compose.yaml
@@ -21,7 +21,7 @@ services:
       - /docker/homeassistant/config:/HASS_Config #Añadir las rutas locales a todos los repos que queramos
       - /docker/Docker_Config:/Docker_Config
       - /docker/Docker_Swarm_Config:/Docker_Swarm_Config
-      - /home/kike/.ssh:/config/.ssh # Necesario para acceso write a los repos Github
+      - /home/userdocker/.ssh:/config/.ssh # Necesario para acceso write a los repos Github
     environment:
       - TZ=${TZ}
       - PUID=${PUID}
