Control tamaño logs

--- a/gestion-docker/portainer-compose.yaml
+++ b/gestion-docker/portainer-compose.yaml
@@ -33,3 +33,9 @@ networks:
       driver: default
       config:
         - subnet: 192.168.21.0/20
+
+logging:
+  driver: "json-file"
+  options:
+    max-size: "10m"
+    max-file: "3"
