--- a/gestion-domo/frigate-compose.yaml
+++ b/gestion-domo/frigate-compose.yaml
@@ -44,3 +44,9 @@ networks:
       driver: default
       config:
         - subnet: 192.168.32.0/20
+
+logging:
+  driver: "json-file"
+  options:
+    max-size: "10m"
+    max-file: "3"
