--- a/gestion-domo/mqtt-compose.yaml
+++ b/gestion-domo/mqtt-compose.yaml
@@ -35,3 +35,8 @@ networks:
       config:
         - subnet: 192.168.130.0/20
 
+logging:
+  driver: "json-file"
+  options:
+    max-size: "10m"
+    max-file: "3"
