--- a/gestion-domo/nut-upsd-compose.yaml
+++ b/gestion-domo/nut-upsd-compose.yaml
@@ -38,3 +38,9 @@ networks:
       driver: default
       config:
         - subnet: 192.168.10.0/20
+
+logging:
+  driver: "json-file"
+  options:
+    max-size: "10m"
+    max-file: "3"
