--- a/gestion-domo/zigbee2mqtt-compose.yaml
+++ b/gestion-domo/zigbee2mqtt-compose.yaml
@@ -34,4 +34,9 @@ networks:
       driver: default
       config:
         - subnet: 192.168.144.0/20
-      
+
+logging:
+  driver: "json-file"
+  options:
+    max-size: "10m"
+    max-file: "3"
