--- a/utilidades/comixed-compose.yaml
+++ b/utilidades/comixed-compose.yaml
@@ -31,3 +31,9 @@ networks:
       driver: default
       config:
         - subnet: 192.168.176.0/20
+
+logging:
+  driver: "json-file"
+  options:
+    max-size: "10m"
+    max-file: "3"
