--- a/utilidades/yacserver-compose.yaml
+++ b/utilidades/yacserver-compose.yaml
@@ -40,3 +40,9 @@ networks:
       driver: default
       config:
         - subnet: 192.168.112.0/20
+
+logging:
+  driver: "json-file"
+  options:
+    max-size: "10m"
+    max-file: "3"
