--- a/gestion-domo/frigate-compose.yaml
+++ b/gestion-domo/frigate-compose.yaml
@@ -13,6 +13,8 @@ services:
     image: ghcr.io/blakeblackshear/frigate:stable
     container_name: frigate
     restart: unless-stopped
+    cap_add:
+      - CAP_PERFMON
     security_opt:
     - no-new-privileges:true
     ports:
