--- a/gestion-domo/zigbee2mqtt-compose.yaml
+++ b/gestion-domo/zigbee2mqtt-compose.yaml
@@ -12,11 +12,11 @@ services:
     image: koenkk/zigbee2mqtt
     container_name: zigbee2mqtt
     restart: unless-stopped
-#    security_opt:
-#    - no-new-privileges:true
+    security_opt:
+    - no-new-privileges:true
     ports:
       - 833:8080
-#    network_mode: host
+    network_mode: host
     volumes:
       - /docker/zigbee2mqtt/data:/app/data
       - /run/udev:/run/udev:ro
