--- a/utilidades/vscode-compose.yaml
+++ b/utilidades/vscode-compose.yaml
@@ -26,7 +26,7 @@ services:
       - TZ=${TZ}
       - PUID=${PUID}
       - PGID=${PGID}
-      - PASSWORD=password 
+      - PASSWORD=${VSCODE_PWD}
       - DEFAULT_WORKSPACE=/HASS_Config #optional
       - CS_DISABLE_GETTING_STARTED_OVERRIDE=true
 
