cambio nombre ENV FREEDNS_HOSTNAME, HOSTNAME debe ser que toma variables de entorno...

--- a/gestion-red/dynamicdns-compose.yaml
+++ b/gestion-red/dynamicdns-compose.yaml
@@ -15,7 +15,7 @@ services:
       - USER=${FREEDNS_USR}
       - PASSWORD=${FREEDNS_PASSWORD}
       - SERVICE=freedns
-      - HOSTNAME=${HOSTNAME}
+      - HOSTNAME=${FREEDNS_HOSTNAME}
       - DETECTIP=1
       - INTERVAL=10
     healthcheck:
