--- a/gestion-red/adwardhome-compose.yaml
+++ b/gestion-red/adwardhome-compose.yaml
@@ -1,6 +1,6 @@
 # https://github.com/EnriqueBesuman/Docker_Config
 #
-# https://192.168.1.254:3000
+# https://192.168.1.254:3030
 #
 # Repo Adward Home: https://hub.docker.com/r/adguard/adguardhome
 # Documentación: https://cyberhost.uk/adguard-setup/
@@ -19,14 +19,14 @@ services:
 #      - PUID=${PUID}
 #      - PGID=${PGID}
     ports:
-      - 53:53/tcp # plain DNS.
-      - 53:53/udp # plain DNS.
+##      - 53:53/tcp # plain DNS.
+##      - 53:53/udp # plain DNS.
       - 784:784/udp # add if you are going to run AdGuard Home as a DNS-over-QUIC server
       - 853:853/tcp # add if you are going to run AdGuard Home as a DNS-over-TLS server
 #      - 5443:5443/udp # add if you are going to run AdGuard Home as a DNSCrypt server
       - 3030:3000/tcp # add if you are going to use AdGuard Home's admin panel as well as run AdGuard Home as an HTTPS/DNS-over-HTTPS server
       - 80:80/tcp # add if you are going to use AdGuard Home's admin panel as well as run AdGuard Home as an HTTPS/DNS-over-HTTPS server
-      - 443:443/tcp # add if you are going to use AdGuard Home's admin panel as well as run AdGuard Home as an HTTPS/DNS-over-HTTPS serve
+##      - 443:443/tcp # add if you are going to use AdGuard Home's admin panel as well as run AdGuard Home as an HTTPS/DNS-over-HTTPS serve
 #      - 67:67/udp # Only to use AdGuard Home as a DHCP server
 #      - 68:68/tcp # Only to use AdGuard Home as a DHCP server 
 #      - 68:68/udp # Only to use AdGuard Home as a DHCP server
