--- a/gestion-red/adwardhome-compose.yaml
+++ b/gestion-red/adwardhome-compose.yaml
@@ -18,20 +18,26 @@ services:
       - TZ=${TZ}
 #      - PUID=${PUID}
 #      - PGID=${PGID}
-    ports:
-##      - 53:53/tcp # plain DNS.
-##      - 53:53/udp # plain DNS.
-      - 784:784/udp # add if you are going to run AdGuard Home as a DNS-over-QUIC server
-      - 853:853/tcp # add if you are going to run AdGuard Home as a DNS-over-TLS server
-#      - 5443:5443/udp # add if you are going to run AdGuard Home as a DNSCrypt server
-      - 3030:3000/tcp # add if you are going to use AdGuard Home's admin panel as well as run AdGuard Home as an HTTPS/DNS-over-HTTPS server
-      - 80:80/tcp # add if you are going to use AdGuard Home's admin panel as well as run AdGuard Home as an HTTPS/DNS-over-HTTPS server
-##      - 443:443/tcp # add if you are going to use AdGuard Home's admin panel as well as run AdGuard Home as an HTTPS/DNS-over-HTTPS serve
-#      - 67:67/udp # Only to use AdGuard Home as a DHCP server
-#      - 68:68/tcp # Only to use AdGuard Home as a DHCP server 
-#      - 68:68/udp # Only to use AdGuard Home as a DHCP server
-#      - 5443:5443/tcp # # add if you are going to run AdGuard Home as a DNSCrypt server  
-#      - 5443:5443/udp # add if you are going to run AdGuard Home as a DNSCrypt server
+    ports:    
+      # Plain DNS
+      - 53:53/tcp # plain DNS.
+      - 53:53/udp # plain DNS.
+      # DNS-over-QUIC
+#      - 784:784/udp 
+#      - 853:853/udp
+      # DNS-over-TLS
+#      - 853:853/tcp
+      # AdGuard Home Admin Panel as well as DNS-over-HTTPS
+      - 3000:3000/tcp 
+      - 880:80/tcp
+      - 8443:443/tcp
+      # Only DHCP server 
+#      - 67:67/udp 
+#      - 68:68/tcp 
+#      - 68:68/udp 
+      # DNSCrypt
+#      - 5443:5443/tcp 
+#      - 5443:5443/udp 
 #    network_mode: host # Only to use AdGuard Home as a DHCP server
     volumes:
       - /docker/adwardhome/work:/opt/adguardhome/work
