--- a/gestion-red/adwardhome-compose.yaml
+++ b/gestion-red/adwardhome-compose.yaml
@@ -20,17 +20,17 @@ services:
 #      - PGID=${PGID}
     ports:    
       # Plain DNS
-      - 53:53/tcp # plain DNS.
-      - 53:53/udp # plain DNS.
+#      - 53:53/tcp # plain DNS.
+#      - 53:53/udp # plain DNS.
       # DNS-over-QUIC
 #      - 784:784/udp 
 #      - 853:853/udp
       # DNS-over-TLS
 #      - 853:853/tcp
       # AdGuard Home Admin Panel as well as DNS-over-HTTPS
-      - 3000:3000/tcp 
-      - 880:80/tcp
-      - 8443:443/tcp
+#      - 3000:3000/tcp 
+#      - 80:80/tcp
+#      - 443:443/tcp
       # Only DHCP server 
 #      - 67:67/udp 
 #      - 68:68/tcp 
