--- a/gestion-red/adwardhome-compose.yaml
+++ b/gestion-red/adwardhome-compose.yaml
@@ -18,7 +18,7 @@ services:
       - TZ=${TZ}
 #      - PUID=${PUID}
 #      - PGID=${PGID}
-#    ports:    
+    ports:    
       # Plain DNS
 #      - 53:53/tcp # plain DNS.
 #      - 53:53/udp # plain DNS.
@@ -28,7 +28,7 @@ services:
       # DNS-over-TLS
 #      - 853:853/tcp
       # AdGuard Home Admin Panel as well as DNS-over-HTTPS
-#      - 3000:3000/tcp 
+      - 3000:3000/tcp 
 #      - 80:80/tcp
 #      - 443:443/tcp
       # Only DHCP server 
