--- a/gestion-red/adwardhome-compose.yaml
+++ b/gestion-red/adwardhome-compose.yaml
@@ -29,7 +29,7 @@ services:
 #      - 853:853/tcp
       # AdGuard Home Admin Panel as well as DNS-over-HTTPS
       - 3000:3000/tcp 
-#      - 80:80/tcp
+      - 8080:80/tcp
 #      - 443:443/tcp
       # Only DHCP server 
 #      - 67:67/udp 
