--- a/gestion-red/pihole-compose.yaml
+++ b/gestion-red/pihole-compose.yaml
@@ -39,8 +39,9 @@ services:
     cap_add:
       - NET_ADMIN # Required if you are using Pi-hole as your DHCP server, else not needed
     labels: # Labels para What's up Docker
-      - wud.display.name=Pi Hole
+      - wud.display.name=Pi-Hole
       - wud.display.icon=si:pihole
+      - wud.tag.include=latest
 
     logging:
       driver: "json-file"
