--- a/utilidades/vscode-compose.yaml
+++ b/utilidades/vscode-compose.yaml
@@ -32,8 +32,9 @@ services:
       - CS_DISABLE_GETTING_STARTED_OVERRIDE=true
 
     labels: # Labels para What's up Docker
-      - wud.display.name=Visual Code
-      - wud.display.icon=si:visualstudiocode
+      - wud.display.name=VSCode
+      - wud.display.icon=mdi:microsoft-visual-studio-code
+      - wud.tag.include=latest
 
     logging:
       driver: "json-file"
