--- a/utilidades/flame-compose.yaml
+++ b/utilidades/flame-compose.yaml
@@ -25,6 +25,7 @@ services:
     labels: # Labels para What's up Docker
       - wud.display.name=Flame
       - wud.display.icon=mdi:fire-circle
+      - wud.tag.include=latest
 
     logging:
       driver: "json-file"
