--- a/utilidades/vscode-compose.yaml
+++ b/utilidades/vscode-compose.yaml
@@ -7,7 +7,7 @@
 version: "3.8"
 
 services:
-   
+
   vscode:
     image: lscr.io/linuxserver/code-server:latest
     container_name: vscode
@@ -34,7 +34,7 @@ services:
     labels: # Labels para What's up Docker
       - wud.display.name=VSCode
       - wud.display.icon=mdi:microsoft-visual-studio-code
-      - wud.tag.include=latest
+#      - wud.tag.include=latest
 
     logging:
       driver: "json-file"
