documentación dependencias de nginx

--- a/gestion-domo/hass-compose.yaml
+++ b/gestion-domo/hass-compose.yaml
@@ -25,6 +25,7 @@ services:
 #    depends_on: 
 #      - nut-upsd
 #      - zigbee2mqtt
+#      - nginx
     image: ghcr.io/home-assistant/home-assistant:stable
     container_name: hass
     restart: unless-stopped
