--- a/gestion-red/pihole-compose.yaml
+++ b/gestion-red/pihole-compose.yaml
@@ -14,6 +14,8 @@
 services:
 
   pihole:
+#    depends_on: 
+#      - nginx
     image: pihole/pihole:latest
     container_name: "pihole"
     restart: unless-stopped
