--- a/gestion-domo/nut-upsd-compose.yaml
+++ b/gestion-domo/nut-upsd-compose.yaml
@@ -27,7 +27,7 @@ services:
       - API_USER=upsmon # Opcional, este es el user por defecto
       - API_PASSWORD=secret # Opcional, esta es la password por defecto
     devices:
-      - /dev/bus/usb/001/002 # Para obtner el ubs: lsusb (Cypress Semiconductor USB to Serial)
+      - /dev/bus/usb/001/002 # VER NOTA *
     labels: # Labels para What's up Docker
       - wud.display.name=Network UPS Tools
       - wud.display.icon=mdi:car-battery
@@ -45,3 +45,28 @@ networks:
       driver: default
       config:
         - subnet: 192.168.10.0/20
+
+# NOTA: En cada reinicio, es posible que cambie la dirección del puerto, para saber si es así, ejecutar
+# en PuTTy el comando lsusb, y aparecerá algo como esto:
+
+# kike@myserver:~$ lsusb
+# Bus 002 Device 002: ID 0930:0b1a Toshiba Corp. STOR.E ALU 2S
+# Bus 002 Device 001: ID 1d6b:0003 Linux Foundation 3.0 root hub
+# Bus 001 Device 003: ID 1a86:55d4 QinHeng Electronics SONOFF Zigbee 3.0 USB Dongle Plus V2
+# Bus 001 Device 004: ID 0665:5161 Cypress Semiconductor USB to Serial
+# Bus 001 Device 001: ID 1d6b:0002 Linux Foundation 2.0 root hub
+# kike@myserver:~$
+
+# El puerto correccto será el que tiene pinchado "Cypress Semiconductor USB to Serial"
+# Entonces, si es necesario, en la configuración de los devices, pues se corrige, se sube al repositorio, y listo 
+# Por ejemplo, si en el yaml ponía:
+
+#    devices:
+#      - /dev/bus/usb/001/004
+
+# Pues habrá que poner:
+
+#    devices:
+#      - /dev/bus/usb/001/002
+#
+# se sube al repositorio, y listo 
